tests/ui/imports/suggest-remove-issue-121315.stderr
error: redundant import: `std::convert::TryFrom`
  --> $DIR/suggest-remove-issue-121315.rs:8:9
   |
LL |     use std::convert::TryFrom;
   |         ^^^^^^^^^^^^^^^^^^^^^
  --> $SRC_DIR/std/src/prelude/mod.rs:LL:COL
   |
   = note: the item `TryFrom` is already defined here
   |
note: the lint level is defined here
  --> $DIR/suggest-remove-issue-121315.rs:3:9
   |
LL | #![deny(unused_imports)]
   |         ^^^^^^^^^^^^^^

error: redundant imports: `TryFrom`, `TryInto`
  --> $DIR/suggest-remove-issue-121315.rs:15:24
   |
LL |     use std::convert::{TryFrom, TryInto};
   |                        ^^^^^^^  ^^^^^^^
  --> $SRC_DIR/std/src/prelude/mod.rs:LL:COL
   |
   = note: the item `TryFrom` is already defined here
   |
   = note: the item `TryInto` is already defined here

error: unused or redundant imports: `AsMut`, `Into`
  --> $DIR/suggest-remove-issue-121315.rs:24:24
   |
LL |     use std::convert::{AsMut, Into};
   |                        ^^^^^  ^^^^
  --> $SRC_DIR/std/src/prelude/mod.rs:LL:COL
   |
   = note: the item `Into` is already defined here

error: unused import: `From`
  --> $DIR/suggest-remove-issue-121315.rs:32:24
   |
LL |     use std::convert::{From, Infallible};
   |                        ^^^^

error: aborting due to 4 previous errors

